# OpenSoft2015

./: CMakeCache.txt  CMakeLists.txt  Makefile  adaptivebinarise.py  cluster.txt~  cmake_install.cmake  file.tff  graph_separation  graph_separation.cpp  graph_separation1  graph_separation1.cpp  preprocessor.py
binarizewolfjolion-src/: binarizewolfjolion  binarizewolfjolion.cpp  out-005.tiff  out.txt  out3-001.txt  r3-001.txt
binarizewolfjolion-src/tested images/: out-000.txt  out-001.txt  out-003.txt  out-004.txt  out-007.txt  out-008.txt  outmy.txt
build-test-Desktop_Qt_5_0_2_GCC_32bit-Debug/: Makefile  moc_mainwindow.cpp  test  ui_mainwindow.h
multicrop-output/: output-1-001.ppm  output-1-002.ppm  output-1-003.ppm  output-2-000.ppm  output-2-001.ppm  output-2-002.ppm  output-2-003.ppm  output-2-004.ppm  output-3-000.ppm  output-3-001.ppm  output-3-002.ppm  output-3-003.ppm  output-3-004.ppm  output-3-005.ppm  output-3-006.ppm  output-3-007.ppm  output-3-008.ppm  output-3-009.ppm  output-3-010.ppm  output-3-011.ppm  output-3-012.ppm  output-3-013.ppm  output-3-014.ppm  output-3-015.ppm  output-3-016.ppm  output-3-017.ppm  output-4-000.ppm  output-4-001.ppm  output-4-002.ppm  output-4-003.ppm  output-4-004.ppm  output-4-005.ppm  output-4-006.ppm  output-4-007.ppm  output-4-008.ppm  output-5-000.ppm  output-5-002.ppm  output-5-003.ppm  output-5-004.ppm  output-5-005.ppm  (+5 more)
test/: mainwindow.ui  test.pro
